<resources>
    <string name="app_name">Lab6</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">Button</string>
    <string name="MyWidgets">Here are my widgets:</string>
    <string name="checkThisOut">Check this out!</string>
    <string name="switchOnOff">Switch on / off</string>
    <string name="typeAnswer">Type your answer in here</string>
    <string name="emailAddress">Enter your email address:</string>
    <string name="typeEmail">Type your email here</string>
    <string name="typePassword">Type your password:</string>
    <string name="login">Login</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="enterName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="picture">Picture</string>
    <string name="clickButton">Click the button above to take a picture</string>
    <string name="gotochat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="typehere">Type here</string>
    <string name="gototoolbar">Go to Toolbar page</string>
    <string name="discord">Discord</string>
    <string name="pokemon">Pokemon</string>
    <string name="music">Music</string>
    <string name="league">League</string>
    <string name="initialMessage">This is the initial message</string>
    <string name="whatisthemessage">What is your new message?</string>
    <string name="yes">Yes</string>
    <string name="goback">Go back?</string>
    <string name="cancel">Cancel</string>
    <string name="nochanges">No changes were made</string>
    <string name="clickedonoverflow">You clicked on the overflow menu</string>
    <string name="gotoweatherforecast">Go to Weather Forecast</string>
    <string name="currenttemp">Current temp: </string>
    <string name="mintemp">Min temp: </string>
    <string name="maxtemp">Max temp: </string>
    <string name="uvrating">UV Rating: </string>
    <string name="windspeed">Wind speed: </string>
</resources>
