<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/yourProfile"/>
        <TextView
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yourName" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterName" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourEmail"/>
        <EditText
            android:id="@+id/emailArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture"/>
        <ImageButton
            android:id="@+id/imagebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/picture_frame"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clickButton"/>
        <Button
            android:id="@+id/goToChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotochat"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>