<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/discord"
        android:icon="@drawable/discord"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/item2"
        android:title="@string/league"
        android:icon="@drawable/league"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item android:id="@+id/item3"
        android:title="@string/pokemon"
        android:icon="@drawable/pokemon"
        android:orderInCategory="300"
        app:showAsAction="always"/>
    <item android:id="@+id/item4"
        android:title="@string/music"
        android:icon="@drawable/music"
        app:showAsAction="never"/>
</menu>