<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/button0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="fill"
        android:text="@string/MyWidgets"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_weight="1"
        android:gravity="fill"
        android:textAlignment="center"
        android:layout_columnWeight="1"/>
    <ImageButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:gravity="fill"
        android:layout_columnWeight="1"/>
    <CheckBox
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkThisOut"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnWeight="1" />
    <Switch
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchOnOff"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_columnWeight="1"/>
    <EditText
        android:id="@+id/button5"
        android:hint="@string/typeAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:layout_columnSpan="2"/>

</GridLayout>
