<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@android:drawable/picture_frame"/>
        <TextView
            android:id="@+id/currenttemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/currenttemp"/>
        <TextView
            android:id="@+id/mintemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/mintemp"/>
        <TextView
            android:id="@+id/maxtemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/maxtemp"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/uvrating"/>
        <ProgressBar
            android:id="@+id/progbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>