<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/chatList"
    android:transcriptMode="alwaysScroll">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>
        <EditText
            android:id="@+id/textArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/typehere"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>
        <Button
            android:id="@+id/receiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:layout_weight="1"
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>